# bull.sh

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC_MULTI_FACTOR_ANALYSIS.md  pyproject.toml  requirements.txt  transcript.md
.claude/: settings.local.json
bullsh/: __init__.py  __main__.py  cli.py  config.py  logging.py
bullsh/agent/: __init__.py  base.py  bear.py  bull.py  compare.py  debate.py  moderator.py  orchestrator.py  research.py
bullsh/agent/stampede/: __init__.py  executor.py  loop.py  planner.py  reflector.py  schemas.py  synthesizer.py  understanding.py
bullsh/factors/: __init__.py  calculator.py  excel_factors.py  fetcher.py  prompts.py  regression.py  scenarios.py  session.py
bullsh/frameworks/: __init__.py  base.py  piotroski.py  porter.py  valuation.py
bullsh/storage/: __init__.py  artifacts.py  cache.py  sessions.py  vectordb.py
bullsh/tools/: __init__.py  base.py  excel.py  export.py  factors.py  financials.py  insiders.py  news.py  rag.py  sec.py  social.py  thesis.py  yahoo.py
bullsh/ui/: __init__.py  formatter.py  intro.py  repl.py  status.py  suggestions.py  theme.py
specs/: DEBATE_SPEC.md  STAMPEDE_SPEC.md
tests/: __init__.py  conftest.py  test_config.py  test_tools_base.py
